@@ -35,10 +35,8 @@ dependencies {
 
 application {
     applicationName = "kotbusta"
-    mainClass.set("io.heapy.kotbusta.ApplicationKt")
-    applicationDefaultJvmArgs = listOf(
-        "--enable-native-access=ALL-UNNAMED",
-    )
+    mainClass.set("io.heapy.kotbusta.Application")
+    applicationDefaultJvmArgs = listOf()
 }
 
 tasks.distTar {
